[tool.poetry]
name = "veml6030py"
version = "0.1.0"
description = "Python library for reading VEML6030 ambient light sensor from Sparkfun."
authors = ["n8many"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
